--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,23 +1,24 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_calibratesensor"
-        android:orderInCategory="98"
-        android:showAsAction="ifRoom"
+
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_half_important"
         android:title="@string/action_calibratesensor"/>
     
     <item
         android:id="@+id/action_refresh"
-        android:orderInCategory="99"
-        android:showAsAction="always"
+
+        app:showAsAction="always"
         android:icon="@drawable/navigation_refresh"
         android:title="@string/action_refresh"/>
     
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="always"
+
+        app:showAsAction="always"
         android:icon="@drawable/action_settings"
         android:title="@string/action_settings"/>
 
