--- a/app/src/main/res/layout/fragment_manualinput.xml
+++ b/app/src/main/res/layout/fragment_manualinput.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ffffff">
+    android:background="@drawable/grid_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
