--- a/app/src/main/res/layout/fragment_glucoseestimation.xml
+++ b/app/src/main/res/layout/fragment_glucoseestimation.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Target device:"
+            android:text="BioMKR device:"
             android:id="@+id/target_device_label"
             android:layout_gravity="right"
             android:layout_toEndOf="@id/dial_chart"
@@ -58,7 +58,6 @@
             android:layout_below="@+id/connection_status_label"
             android:layout_toEndOf="@+id/dial_chart"
             android:textColor="@color/theme_color" />
-
 
     </RelativeLayout>
 
@@ -109,17 +108,6 @@
         android:id="@+id/radiogroupAggr"
         >
     </RadioGroup>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trend: "
-        android:id="@+id/trend_text_label" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
 
     <com.glucopred.view.TrendChartView
         android:id="@+id/trend_chart"
